--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@unction/template",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@unction/sample",
+  "version": "1.0.5",
+  "description": "Returns a random member from a array or string",
   "keywords": [
     "unction",
     "functional"
@@ -45,6 +45,7 @@
     "tap": "10.3.3"
   },
   "dependencies": {
+    "@unction/shuffle": "^1.0.4",
     "ramda": "0.24.1"
   }
 }
