Ramda complicates things because their types are bad

--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   "repository": "github:unctionjs/tempLate",
   "bugs": "https://github.com/unctionjs/tempLate/issues",
   "main": "transpiled/source.js",
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
+  },
   "scripts": {
     "prepublishOnly": "npm run build",
     "prepare": "flow-typed install",
@@ -48,17 +55,11 @@
     "flow-bin": "0.51.1",
     "flow-typed": "2.1.5",
     "nyc": "11.1.0",
+    "ramda": "0.24.1",
     "tap": "10.3.4"
   },
   "dependencies": {
-    "@unction/shuffle": "2.0.0",
-    "ramda": "0.24.1"
-  },
-  "nyc": {
-    "require": [
-      "babel-register"
-    ],
-    "sourceMap": false,
-    "instrument": false
+    "@unction/first": "1.0.0",
+    "@unction/shuffle": "2.0.0"
   }
 }
