Fixing the main location

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/unctionjs/tempLate#readme",
   "repository": "github:unctionjs/tempLate",
   "bugs": "https://github.com/unctionjs/tempLate/issues",
-  "main": "transpiled/source.js",
+  "main": "transpiled/index.js",
   "nyc": {
     "require": [
       "babel-register"
@@ -61,6 +61,5 @@
   "dependencies": {
     "@unction/first": "1.0.0",
     "@unction/shuffle": "2.0.0"
-  },
-  "main": "transpiled/index.js"
+  }
 }
