--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   "dependencies": {
     "@unction/first": "1.1.0",
     "@unction/shuffle": "2.0.0"
-  }
+  },
+  "files": [
+    "transpiled/index.js"
+  ]
 }
