--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "tap": "10.3.4"
   },
   "dependencies": {
-    "@unction/first": "1.1.0",
-    "@unction/shuffle": "2.0.0"
+    "@unction/first": "^1.1.0",
+    "@unction/shuffle": "^2.1.0"
   },
   "files": [
     "transpiled/index.js"
