--- a/package.json
+++ b/package.json
@@ -65,12 +65,13 @@
     "@unction/shuffle": "13.7.0"
   },
   "files": [
-    "index.js",
+    "index.ts",
     "main.js",
     "main.js.map",
     "browser.js",
     "browser.js.map"
   ],
   "module": "module.js",
-  "browser": "browser.js"
+  "browser": "browser.js",
+  "types": "types.d.ts"
 }
