--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@unction/first": "3.1.4",
-    "@unction/shuffle": "13.11.0"
+    "@unction/first": "^3.1.5",
+    "@unction/shuffle": "^13.12.0"
   }
 }
